compiler/errorc.txt
hello.c:1:1: error: unknown type name ‘wefvwefv’
 wefvwefv
 ^~~~~~~~
hello.c:3:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘werfvwrefvwertfv’
 werfvwrefvwertfv
 ^~~~~~~~~~~~~~~~
hello.c:3:1: error: unknown type name ‘werfvwrefvwertfv’
